--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta http-equiv="Expires" content="0">
     <link rel="icon" href="images/logo1.png" type="image/png">
     <link rel="apple-touch-icon" href="images/logo1.png">
-    <title>MENTAL</title>
-    <meta name="description" content="MENTAL is a cheeky, sarcastic genius representing your inner thoughts on the Solana network.">
+    <title>THINK</title>
+    <meta name="description" content="THINK is a cheeky, sarcastic genius representing your inner thoughts on the Solana network.">
   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -23,48 +23,48 @@
       <div class="ticker-wrapper">
         <div class="ticker">
             <div class="ticker-move">
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
             </div>
             <div class="ticker-move">
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
             </div>
         </div>
       </div>
@@ -89,22 +89,22 @@
       <div class="social-links-and-ca-wrapper">
         <div class="social-links-wrapper">
 
-          <a class="social-link" href="https://x.com/M3NTAL_CAPACITY" target="_blank">
+          <a class="social-link" href="https://x.com/THINK_C0IN" target="_blank">
             <img class="social-img" src="images/x.svg">
           </a>
 
-          <a class="social-link" href="https://t.me/MENTAL_CAPACITY" target="_blank">
+          <a class="social-link" href="https://t.me/THINK_C0IN" target="_blank">
             <img class="social-img" src="images/telegram.svg">
           </a>
-          <a class="social-link" href="https://t.me/MENTAL_CAPACITY_CHAT" target="_blank">
+          <a class="social-link" href="https://t.me/THINK_CHAT_SOL" target="_blank">
             <img class="social-img" src="images/telegram.svg">
           </a>
-            <a class="social-link" href="https://pump.fun/4AAcBU9fjQaB3FWc8kn45QLnnDooTpaKSNPJnPLYpump" target="_blank">
+            <a class="social-link" href="https://pump.fun/GPiDwkygXsY1LetpeyW6nekn85d4unbF9D48vQiHpump" target="_blank">
             <img style="filter: brightness(0%);" class="social-img" src="images/pump.png">
           </a>
         </div>
         <div class="ca">
-          4AAcBU9fjQaB3FWc8kn45QLnnDooTpaKSNPJnPLYpump
+          GPiDwkygXsY1LetpeyW6nekn85d4unbF9D48vQiHpump
         </div>
       </div>
 
@@ -115,8 +115,8 @@
           <img class="brain-text-logo shaker" alt="brain-text-logo" src="images/brain_header.png">
         </div>
 
-        <span class="brain-text fade-in-element">MENTAL is a cheeky, sarcastic genius representing your inner thoughts on the Solana network.</span>
-        <a href="https://pump.fun/4AAcBU9fjQaB3FWc8kn45QLnnDooTpaKSNPJnPLYpump" target="_blank" class="buy-brain-button"><img src="images/buy_brain_button.png"></a>
+        <span class="brain-text fade-in-element">Think is a cheeky, sarcastic genius representing your inner thoughts on the Solana network.</span>
+        <a href="https://pump.fun/GPiDwkygXsY1LetpeyW6nekn85d4unbF9D48vQiHpump" target="_blank" class="buy-brain-button"><img src="images/buy_brain_button.png"></a>
       </div>
     </section>
     <section class="why-brain-wrapper">
@@ -124,10 +124,10 @@
         <div class="text-warpper">
           <img class="section-title why-brain-title fade-in-element" src="images/why_brain.png">
           <br>
-            Dis smol MENTAL sez: "BUY NOW!"<br>
-            Dis big MENTAL sez: "MOON SOON!<br>
+            Dis smol THINK sez: "BUY NOW!"<br>
+            Dis big THINK sez: "MOON SOON!<br>
           <br>
-            Why $MENTAL Coin?<br>
+            Why $THINK Coin?<br>
           <br>
             MOON! We go zoom zoom 🚀<br>
             DIAMOND HANDS! No paper hands, no weak sauce 💎✋<br>
@@ -148,48 +148,48 @@
       <div class="ticker-wrapper dark">
         <div class="ticker">
             <div class="ticker-move">
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
             </div>
             <div class="ticker-move">
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
-                <span class="text">$MENTAL</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
+                <span class="text">$THINK</span>
             </div>
         </div>
       </div>
@@ -230,10 +230,10 @@
 
         <div class="step">
           <div class="step-title-and-text">
-            <h3>3. SWAP $SOL FOR $MENTAL</h3>
-            <p>Click on the button below, connect your wallet, and press SWAP! BOOM! <strong>You are a $MENTAL holder!</strong></p>
+            <h3>3. SWAP $SOL FOR $THINK</h3>
+            <p>Click on the button below, connect your wallet, and press SWAP! BOOM! <strong>You are a $THINK holder!</strong></p>
             <p></p>
-              <a href="https://pump.fun/4AAcBU9fjQaB3FWc8kn45QLnnDooTpaKSNPJnPLYpump" target="_blank" class="buy-brain-instep">Buy $MENTAL</a>
+              <a href="https://pump.fun/GPiDwkygXsY1LetpeyW6nekn85d4unbF9D48vQiHpump" target="_blank" class="buy-brain-instep">Buy $THINK</a>
           </div>
 
           <img src="images/c.png" alt="Swap $SOL for $BRAIN">
@@ -246,14 +246,14 @@
 
       <div class="social-links-wrapper-bottom">
 
-        <a class="social-link" href="https://x.com/M3NTAL_CAPACITY" target="_blank">
+        <a class="social-link" href="https://x.com/THINK_C0IN" target="_blank">
           <img class="social-img" src="images/x-w.svg">
         </a>
 
-        <a class="social-link" href="https://t.me/MENTAL_CAPACITY" target="_blank">
+        <a class="social-link" href="https://t.me/THINK_C0IN" target="_blank">
           <img class="social-img" src="images/telegram-w.svg">
         </a>
-        <a class="social-link" href="https://t.me/MENTAL_CAPACITY_CHAT" target="_blank">
+        <a class="social-link" href="https://t.me/THINK_CHAT_SOL" target="_blank">
           <img class="social-img" src="images/telegram-w.svg">
         </a>
       </div>
@@ -269,7 +269,7 @@
     </section>
     <div class="footer">
       <span class="disclaimer">
-        Legal Disclaimer: $MENTAL is a meme coin with no value or financial return. $MENTAL is purely for entertainment. By purchasing $MENTAL, you acknowledge this disclaimer.
+        Legal Disclaimer: $THINK is a meme coin with no value or financial return. $THINK is purely for entertainment. By purchasing $THINK, you acknowledge this disclaimer.
       </span>
     </div>
     <script type="text/javascript" src="js/script.js"></script>
